Intento de uso de Map

--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
         android:label="app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+         <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCucU7EmJzJeQSepJ3JrQVigMZaAe6is_E"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
