--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sqflite: ^2.0.0
   path_provider: ^2.0.0
   image_picker: ^0.8.4
+  google_maps_flutter: ^2.7.1 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
